# usdt-demo-wallet

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  justfile
.cargo/: config.toml
.github/workflows/: deploy.yml
crates/usdt-wallet-web/: Cargo.toml
crates/usdt-wallet-web/src/: app.rs  browser.js  browser.rs  fedimint.rs  main.rs  styles.css  wallet-worker.js  wallet_runtime.rs
docs/: ARCHITECTURE.md  DESIGN.md  FEDIMINT_BRANCH.md
public/: manifest.webmanifest  sw.js
scripts/: wasm-opt-hook.sh
