[package]
name = "usdt-wallet-web"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "usdt-wallet-web"
path = "src/main.rs"

[dependencies]
# Fedimint client + the two modules this wallet uses.
fedimint-core.workspace = true
fedimint-client.workspace = true
fedimint-client-module.workspace = true
fedimint-connectors.workspace = true
fedimint-bip39.workspace = true
fedimint-derive-secret.workspace = true
fedimint-cursed-redb.workspace = true
fedimint-mintv2-client.workspace = true
fedimint-usdt-client.workspace = true
fedimint-usdt-common.workspace = true

# UI + wasm glue.
leptos.workspace = true
send_wrapper.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true

anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
getrandom.workspace = true
qrcode.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "Window",
    "DedicatedWorkerGlobalScope",
    "FileSystemSyncAccessHandle",
    "console",
]
